upgrade to spring boot 4. Removing BaseDao and BaseDaoImpl (Spring Data Jpa adoption)